syntax = "proto3";

option csharp_namespace = "OrganizationService.Contracts";

package organization.types;

enum OrganizationMemberRole {
  OWNER = 0;
  ADMIN = 1;
  MANAGER = 2;
  MEMBER = 3;
  GUEST = 4;
}

message OrganizationDto {
  string id = 1;
  string name = 2;
}

message OrganizationMemberDto {
  string organization_id = 1;
  string user_id = 2;
  OrganizationMemberRole role = 3;
}